--- a/settings/project.json
+++ b/settings/project.json
@@ -12,7 +12,7 @@
   "group-list": [
     "default"
   ],
-  "simulator-orientation": false,
+  "simulator-orientation": true,
   "simulator-resolution": {
     "height": 1080,
     "width": 1920
